testsuite/gsksl/errors/too-many-initializers-in-array.glsl
void
main ()
{
  vec2 v = { 1, 2, 3 };
}
